#85642 Differences Helpdesk 4 and 5 , Attachment in server and Otherfield to widetext

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/ServerFieldsSettingsViewModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/ServerFieldsSettingsViewModel.cshtml
@@ -133,6 +133,12 @@
             @Html.EditorFor(m => m.PlaceFieldsSettingsModel.LocationFieldSettingModel, "Settings/FieldSettingModel")
         </tr>
         <tr>
+            <td colspan="6" class="header">@Translation.Get("Dokument")</td>
+        </tr>
+        <tr>
+            @Html.EditorFor(m => m.DocumentFieldsSettingsModel.DocumentFieldSettingModel, "Settings/FieldSettingModel")
+        </tr>
+        <tr>
             <td colspan="6" class="header">@Translation.Get("Status")</td>
         </tr>
         <tr>
