--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Server/EditorTemplates/OtherFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Server/EditorTemplates/OtherFieldsModel.cshtml
@@ -11,7 +11,7 @@
         <div class="span12">
             <table class="tableform">
                 @Html.EditorFor(m => m.Info, "Fields/WideText")
-                @Html.EditorFor(m => m.Other, "Fields/Text")
+                @Html.EditorFor(m => m.Other, "Fields/WideText")
                 @Html.EditorFor(m => m.URL, "Fields/Text")
                 @Html.EditorFor(m => m.URL2, "Fields/Text")
                 @Html.EditorFor(m => m.Owner, "Fields/Text")
