#89440 added dropdown text translation support

--- a/ExtendedCase/ExtendedCase.WebComponent/src/app/components/controls/fileupload/ec-fileupload.component.html
+++ b/ExtendedCase/ExtendedCase.WebComponent/src/app/components/controls/fileupload/ec-fileupload.component.html
@@ -17,7 +17,7 @@
           (fileOver)="fileOverBase($event)"
           [uploader]="fileUploader"
           class="file-drop well my-drop-zone">
-        Drop files here
+          {{ fieldTemplate.addonText.length > 0 ? fieldTemplate.addonText : 'Drop files here'}}
       </div>
 
       <div class="file-list">
