#88228 - fixed missing param for log file upload

--- a/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
+++ b/dhHelpdeskNG/DH.Helpdesk.WebMobile/src/app/modules/case-edit-module/components/case-edit/case-log-input/case-log-input.component.html
@@ -55,7 +55,7 @@
             <mbsc-listview-item *ngFor="let file of filesInternal;" icon="fa-paperclip">{{ file }}</mbsc-listview-item>
         </mbsc-listview>
     </div>
-    <log-files-upload *ngIf="hasFullAccess" [caseKey]="caseKey" [type]="logFileType.Internal" (fileUploaded)="processFileUploaded($event)"></log-files-upload>
+    <log-files-upload *ngIf="hasFullAccess" [caseKey]="caseKey" [type]="logFileType.Internal" (fileUploaded)="processFileUploaded($event)" [customerId]="customerId"></log-files-upload>
   </ng-container>
 </ng-container>
   
