--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Printer/EditorTemplates/OtherFieldsModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Printer/EditorTemplates/OtherFieldsModel.cshtml
@@ -11,7 +11,7 @@
             <table class="tableform">
                 @Html.EditorFor(m => m.NumberOfTrays, "Fields/Text")
                 @Html.EditorFor(m => m.Driver, "Fields/Text")
-                @Html.EditorFor(m => m.Info, "Fields/Text")
+                @Html.EditorFor(m => m.Info, "Fields/WideText")
                 @Html.EditorFor(m => m.URL, "Fields/Text")
             </table>
         </div>
