#85642 text change and make show field read able

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Server/EditorTemplates/Documents.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/Server/EditorTemplates/Documents.cshtml
@@ -31,7 +31,7 @@
                                 }
                             </span>
                             <div>
-                                <a id="btnAddFile" href="#upload_files_popup" role="button" class="btn" data-toggle="modal">@Translation.GetCoreTextTranslation("Lägg till")</a>
+                                <a id="btnAddFile" href="#upload_files_popup" role="button" class="btn" data-toggle="modal">@Translation.GetCoreTextTranslation("Välj")</a>
                                 <button id="btnDeleteFile" class="btn"
                                     style="display: @(!string.IsNullOrEmpty(documentModel.Value) ? "inline-block": "none")">@Translation.GetCoreTextTranslation("Ta bort")</button>
                             </div>
