--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/DisplayFieldSettingModel.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Inventory/Views/InventorySettings/EditorTemplates/Settings/DisplayFieldSettingModel.cshtml
@@ -1,7 +1,7 @@
 ﻿@model DH.Helpdesk.Web.Areas.Inventory.Models.EditModel.Settings.FieldSettingModel
 <td>@Html.LabelFor(m => m)</td>
 <td>@Html.CheckBoxFor(m => m.ShowInDetails, new { @class = "switchcheckbox" })</td>
-<td> <input type="text" value="@Model.Caption" disabled="disabled" /></td>
+<td>@Html.TextBoxFor(m => m.Caption, new { @readonly = "readonly" })</td>
 <td><input type="checkbox" disabled="disabled" class="switchcheckbox" /></td>
 <td><input type="checkbox" disabled="disabled" class="switchcheckbox" /></td>
 
